Updated APIs to be id-based across the board, updated authorized so that it returns a MediaConfig object containing all the data needed to make further decisions
